# rust-mongodb-example

./: Cargo.toml  LICENSE  README.md
src/: controller.rs  main.rs
src/controller/: mod.rs
src/service/: mod.rs
