[package]
name = "rust-mongo-example"
version = "0.1.0"
authors = ["Mehmet Sefa Balık <mehmetsefabalik@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
actix = "0.11.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"

mongodb = { version = "2.1.0", default-features = false, features = ["sync"] }
bson = "2.1.0"
serde = "1.0.136"
futures = "0.3.19"